[package]
name = "shble"
version = "0.1.0"
edition = "2021"

[features]
default = [
    "ble-l2cap",
    "ble-gatt-server",
    "ble-gatt-client",
    "ble-sec",
]

ble-l2cap = ["nrf-softdevice/ble-l2cap"]
ble-gatt-server = ["nrf-softdevice/ble-gatt-server"]
ble-gatt-client = ["nrf-softdevice/ble-gatt-client"]
ble-sec = ["nrf-softdevice/ble-sec"]

[patch.crates-io]
embassy-nrf = { path = "../embassy/embassy-nrf" }
embassy-time = { path = "../embassy/embassy-time" }
embassy-embedded-hal = { path = "../embassy/embassy-embedded-hal" }
embassy-sync = { path = "../embassy/embassy-sync" }

[dependencies]
embassy-executor = { version = "0.2.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "nightly", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["nightly", "defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.2.0" }
embassy-nrf = { version = "0.1.0", features = ["nightly", "defmt", "nrf52840", "gpiote", "time-driver-rtc1"] }
embassy-embedded-hal = { version = "0.1.0", features = ["nightly"] }
cortex-m = "0.7.2"
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
nrf-softdevice = { version = "0.1.0", path = "../nrf-softdevice/nrf-softdevice", features = ["nightly", "defmt", "nrf52840", "s140", "ble-peripheral", "ble-central", "critical-section-impl"] }
nrf-softdevice-s140 = { version = "0.1.1", path = "../nrf-softdevice/nrf-softdevice-s140" }
#embedded-storage = "0.3.0"
#embedded-storage-async = "0.4.0"
futures = { version = "0.3.5", default-features = false, features = ["async-await"] }
fixed = "1.2.0"
heapless = "0.7"
atomic-pool = "1.0.0"
static_cell = "1.0.0"
smallvec = { version = "1", default-features = false }
embedded-alloc = "0.5"
lazy_static = { version = "1.4", default-features = false, features = ["spin_no_std"] }
thiserror-no-std = "2"
num-traits = { version = "0.2.15", default-features = false }
paste = { version = "1", default-features = false }
bit_field = "0.10"
rclite = "0.2"

[[bin]]
name = "main"
required-features = ["ble-gatt-server"]


[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
